# rustsol

./: .gitignore  Cargo.toml  LICENSE  README.md  scratch_contract.sol  scratch_output.json
example/: Cargo.toml  solc_output.json  solc_output_augur.json  solc_output_simple.json
example/contracts/augur/: Augur.sol
example/contracts/simple/: contract.sol
example/src/: generate.rs  generated_contract.rs  generated_contract_augur.rs  generated_contract_simple.rs  generated_contract_uniswap3pool.rs  main.rs  run.rs  run_dummy_simple.rs  run_ethers_augur.rs  run_ethers_uniswap3.rs  utils.rs
macros/src/: lib.rs
pytools/: requirements.txt  storage_layout.py
rustsol/: Cargo.toml  README.md
rustsol/src/: data.rs  generate.rs  keccak.rs  layout.rs  lib.rs  main.rs  types.rs  utils.rs
rustsol/src/types/: address.rs  bytes.rs  dynamic_array.rs  keys.rs  mapping.rs  mod.rs  native.rs  primitive.rs  static_array.rs  traits.rs
src/: data.rs  generate.rs  keccak.rs  layout.rs  main.rs  scratch_contract.sol  scratch_output.json  types.rs
