[package]
name = "example"
version = "0.2.0"
authors = ["Roman Zubov <romazu@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
ethereum-types = "0.14"
alloy-primitives = "0.7"
ethers-providers = "2.0"
ethers-core = "2.0"
rustsol = { path = "../rustsol" }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "run_dummy_simple"
path = "src/run_dummy_simple.rs"

[[bin]]
name = "run_ethers_uniswap3"
path = "src/run_ethers_uniswap3.rs"