[package]
name = "rustsol"
version = "0.1.0"
authors = ["Roman Zubov <romazu@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = "0.12"
sha3 = "0.10"

syn = { version = "2", features = ["parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
