[package]
name = "rustsol"
version = "0.2.0"
authors = ["Roman Zubov <romazu@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Rust bindings for storage layouts of solidity contracts"
readme = "README.md"
repository = "https://github.com/romazu/rustsol"
keywords = ["ethereum", "evm", "bindings", "solidity", "contract-storage"]
categories = ["api-bindings", "development-tools::ffi", "parser-implementations", "encoding", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = "0.7"
sha3 = "0.10"

syn = { version = "2", features = ["parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
